# sdkwork-rtc-sdk

./: .gitignore  .sdkwork-assembly.json  README.md
docs/: README.md  flutter-volcengine-im-usage.md  multilanguage-capability-matrix.md  package-standards.md  provider-adapter-standard.md  typescript-volcengine-im-usage.md  usage-guide.md  verification-matrix.md
sdkwork-rtc-sdk-csharp/: README.md
sdkwork-rtc-sdk-csharp/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-flutter/: README.md  pubspec.yaml  pubspec_overrides.yaml
sdkwork-rtc-sdk-flutter/lib/: rtc_sdk.dart
sdkwork-rtc-sdk-flutter/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-flutter/test/: rtc_call_smoke_cli_test.dart  rtc_im_signaling_test.dart  rtc_signaling_transport_test.dart
sdkwork-rtc-sdk-go/: README.md  go.mod
sdkwork-rtc-sdk-go/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-go/rtcstandard/: capability_catalog.go  contract.go  data_source.go  driver_manager.go  language_workspace_catalog.go  provider_activation_catalog.go  provider_catalog.go  provider_extension_catalog.go  provider_package_catalog.go  provider_package_loader.go  provider_selection.go  provider_support.go
sdkwork-rtc-sdk-java/: README.md  pom.xml
sdkwork-rtc-sdk-java/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-kotlin/: README.md  build.gradle.kts
sdkwork-rtc-sdk-kotlin/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-python/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_agora/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_agora/sdkwork_rtc_sdk_provider_agora/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_aliyun/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_aliyun/sdkwork_rtc_sdk_provider_aliyun/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_janus/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_janus/sdkwork_rtc_sdk_provider_janus/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_jitsi/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_jitsi/sdkwork_rtc_sdk_provider_jitsi/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_livekit/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_livekit/sdkwork_rtc_sdk_provider_livekit/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_mediasoup/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_mediasoup/sdkwork_rtc_sdk_provider_mediasoup/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_tencent/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_tencent/sdkwork_rtc_sdk_provider_tencent/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_twilio/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_twilio/sdkwork_rtc_sdk_provider_twilio/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_volcengine/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_volcengine/sdkwork_rtc_sdk_provider_volcengine/: __init__.py
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_zego/: README.md  pyproject.toml
sdkwork-rtc-sdk-python/providers/sdkwork_rtc_sdk_provider_zego/sdkwork_rtc_sdk_provider_zego/: __init__.py
sdkwork-rtc-sdk-python/sdkwork_rtc_sdk/: __init__.py  capability_catalog.py  data_source.py  driver_manager.py  language_workspace_catalog.py  provider_activation_catalog.py  provider_catalog.py  provider_extension_catalog.py  provider_package_catalog.py  provider_package_loader.py  provider_selection.py  provider_support.py  standard_contract.py
sdkwork-rtc-sdk-rust/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/: provider-package-scaffold.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-agora/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-agora/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-aliyun/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-aliyun/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-janus/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-janus/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-jitsi/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-jitsi/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-livekit/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-livekit/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-mediasoup/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-mediasoup/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-tencent/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-tencent/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-twilio/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-twilio/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-volcengine/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-volcengine/src/: lib.rs
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-zego/: Cargo.toml  README.md
sdkwork-rtc-sdk-rust/providers/rtc-sdk-provider-zego/src/: lib.rs
sdkwork-rtc-sdk-rust/src/: capability_catalog.rs  data_source.rs  driver_manager.rs  language_workspace_catalog.rs  lib.rs  provider_activation_catalog.rs  provider_catalog.rs  provider_extension_catalog.rs  provider_package_catalog.rs  provider_package_loader.rs  (+2 more)
sdkwork-rtc-sdk-swift/: Package.swift  README.md
sdkwork-rtc-sdk-typescript/: README.md  package.json  tsconfig.build.json
test/: rtc-standard-fixture-helpers.mjs  verify-sdk-automation.test.mjs
(+373 files in other folders)
