[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkwork-rtc-sdk-provider-tencent"
version = "0.1.0"
description = "Reserved Python provider package boundary for Tencent RTC"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["sdkwork_rtc_sdk_provider_tencent"]

[tool.sdkwork-rtc-provider]
providerKey = "tencent"
pluginId = "rtc-tencent"
driverId = "sdkwork-rtc-driver-tencent"
packageIdentity = "sdkwork-rtc-sdk-provider-tencent"
sourcePath = "sdkwork_rtc_sdk_provider_tencent/__init__.py"
sourceSymbol = "RtcProviderTencentPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
