[package]
name = "rtc-sdk-provider-aliyun"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for Aliyun RTC"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-rtc-provider]
providerKey = "aliyun"
pluginId = "rtc-aliyun"
driverId = "sdkwork-rtc-driver-aliyun"
packageIdentity = "rtc-sdk-provider-aliyun"
sourcePath = "src/lib.rs"
sourceSymbol = "RtcProviderAliyunPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
