[package]
name = "rtc-sdk-provider-janus"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for Janus RTC"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-rtc-provider]
providerKey = "janus"
pluginId = "rtc-janus"
driverId = "sdkwork-rtc-driver-janus"
packageIdentity = "rtc-sdk-provider-janus"
sourcePath = "src/lib.rs"
sourceSymbol = "RtcProviderJanusPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
