[package]
name = "rtc-sdk-provider-livekit"
version = "0.1.0"
edition = "2021"
description = "Reserved Rust provider package boundary for LiveKit RTC"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.sdkwork-rtc-provider]
providerKey = "livekit"
pluginId = "rtc-livekit"
driverId = "sdkwork-rtc-driver-livekit"
packageIdentity = "rtc-sdk-provider-livekit"
sourcePath = "src/lib.rs"
sourceSymbol = "RtcProviderLivekitPackageContract"
rootPublic = false
status = "future-runtime-bridge-only"
runtimeBridgeStatus = "reserved"
